# beamview

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: MANUAL_TEST.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/translation/: tokenizer_source.json  tokenizer_target.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs  menu.rs
src-tauri/src/translation/: cache.rs  engine.rs  mod.rs  model_store.rs  ocr.rs  translator.rs  types.rs
src-tauri/tests/: ocr_integration.rs  translator_e2e.rs  translator_unit.rs
src/lib/: logger.ts
src/lib/audio/: context.ts
src/lib/capture/: constraints.ts  devices.ts
src/lib/components/: ActionBar.svelte  DevicePicker.svelte  EmptyState.svelte  ErrorOverlay.svelte  LoadingState.svelte  ModelDownloadModal.svelte  RegionSelector.svelte  SettingsModal.svelte  TitleBar.svelte  Toast.svelte  TranslationOverlay.svelte  VideoView.svelte  WelcomeScreen.svelte
src/lib/hotkeys/: registry.ts
src/lib/ipc/: commands.ts  index.ts  types.ts
src/lib/services/: frameSampler.ts
src/lib/stores/: devices.svelte.ts  stream.svelte.ts  theme.svelte.ts  translation.svelte.ts  ui.svelte.ts
