[package]
name = "beamview"
version = "0.1.0"
description = "Low-latency capture card viewer for desktop gamers"
authors = ["Jiraphat"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
# The `_lib` suffix is required so the library name does not clash with
# the bin name on Windows — see https://github.com/rust-lang/cargo/issues/8519
name = "beamview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
directories = "5"
