[package]
name = "beamview"
version = "0.1.0"
description = "Low-latency capture card viewer for desktop gamers"
authors = ["Jiraphat"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
# The `_lib` suffix is required so the library name does not clash with
# the bin name on Windows — see https://github.com/rust-lang/cargo/issues/8519
name = "beamview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
directories = "5"
image = "0.25"

# Offline translation — MarianMT inference via candle
# candle-core without features is CPU-only and compiles on all platforms.
# The `metal` feature (macOS GPU acceleration) is added below under the
# macOS-only target block, which Cargo merges with this entry on macOS.
candle-core = "0.10"
candle-transformers = "0.10"
candle-nn = "0.10"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
lru = "0.12"
strsim = "0.11"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"

# Apple Vision Framework bindings + Metal GPU acceleration for candle —
# only compile on macOS. The source code in `src/translation/ocr.rs` and
# the Metal device path in `src/translation/translator.rs` are each gated
# with `#[cfg(target_os = "macos")]`, so pairing Cargo-level gating keeps
# cross-platform `cargo check` green for future Windows / Linux ports.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-vision = "0.3"
objc2-foundation = "0.3"
objc2-core-graphics = "0.3"
# Metal feature merged with the candle-core entry in [dependencies] above.
# On macOS this produces candle-core with Metal GPU support; on Linux only CPU.
candle-core = { version = "0.10", features = ["metal"] }

[dev-dependencies]
tempfile = "3"
